--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -8,8 +8,8 @@
 <div class="row">
     <h4>Log Functions</h4>
 </div>
-    <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" style="margin-bottom:4px;white-space: normal;" role="button" data-toggle="tooltip" data-placement="right" title="ctrl-e">
-        <div class="row">
+    <a href="{{ path('new_entry') }}" class="btn btn-primary btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+        <div class="row" data-toggle="tooltip" data-placement="right" title="ctrl-e">
             <div class="col-md-12 col-xs-12">
                 <strong>Log Entry</strong>
             </div>
