Added aditional styling to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -54,6 +54,25 @@
         <br>
     </div>
     <div class="row">
+        <h4>People Counting</h4>
+    </div>
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            Current Occupancy
+        </div>
+        <div class="panel-body">
+            NNNN
+        </div>
+    </div>
+    <a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+        <div class="row">
+            Counter Data
+        </div>
+    </a>
+    <div class="row">
+        <br>
+    </div>
+    <div class="row">
             <h4>Operator Functions</h4>
     </div>
     <a href="{{ path('user_registration') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
