Further updates  to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h4>Event Info</h4>
+            Event Info
         </div>
         <div class="panel-body">
             Current Event: {{ activeEventName() }}
