updated sidebar styling

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -3,7 +3,7 @@
         Event Info
     </div>
     <div class="panel-body">
-        Current Event: {{ activeEventName() }}
+        <strong>{{ activeEventName() }}</strong>
         <br>
         Current User: {{ app.user.username }}
     </div>
