Updated current user style

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -5,7 +5,7 @@
     <div class="panel-body">
         <strong>{{ activeEventName() }}</strong>
         <br>
-        Current User: {{ app.user.username }}
+        User: {{ app.user.username }}
     </div>
 </div>
 <div class="row">
