Added UPS status placeholder to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -69,6 +69,16 @@
         Counter Data
     </div>
 </a>
+<div class="panel panel-warning">
+    <div class="panel-heading">
+        UPS Status
+    </div>
+    <ul class="list-group">
+        <li class="list-group-item">UPS1: Mains</li>
+        <li class="list-group-item">UPS2: Mains</li>
+        <li class="list-group-item">UPS3: Battery</li>
+    </ul>
+</div>
 <div class="row">
         <h4>Operator Functions</h4>
 </div>
