Added power supplies heading to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -69,6 +69,9 @@
         Counter Data
     </div>
 </a>
+<div class="row">
+    <h4>Power Supplies</h4>
+</div>
 <div class="panel panel-warning">
     <div class="panel-heading">
         UPS Status
