--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -68,7 +68,7 @@
     </div>
     <ul class="list-group">
         {% for ups in getUPS() %}
-            <li class="list-group-item" id="{{ ups.id }}">UPS{{ ups.id }}: Timeout</li>
+            <li class="list-group-item" id="{{ ups.ups.id }}">UPS{{ ups.ups.id }}: Timeout</li>
         {% endfor %}
     </ul>
 </div>
