debugging sidebar ups status

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -70,6 +70,7 @@
         {% for ups in UPSs %}
             <li class="list-group-item" id="{{ ups.id }}">UPS{{ ups.id }}: Timeout</li>
         {% endfor %}
+        {{ GlobalTest }}
     </ul>
 </div>
 <div class="row">
