--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -132,7 +132,10 @@
             },
             dataType: 'json',
             success: function (data) {
-              //Do stuff with the JSON data
+                $.each(data, function (index, item) {
+                    // Use item in here
+                    $('#ups-'.index.id).append('<li id="' + item.user + '">' + item.user + '</li>');
+                });
             }
             setTimeout(sidebarPoll,1000);
         });
