--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -134,7 +134,7 @@
             success: function (data) {
                 $.each(data, function (index, item) {
                     // Use item in here
-                    $('#ups-'.index.id).append('<li id="' + item.user + '">' + item.user + '</li>');
+                    $('#ups-'.index.id).html("UPS" + index.id + ": "+ index.status);
                 });
             }
             setTimeout(sidebarPoll,1000);
