Corrected ajax script on sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -122,7 +122,7 @@
     function sidebarPoll(){
         $.ajax({
             type: 'GET',
-            url: {{ path('UPS_status') }},
+            url: '{{ path('UPS_status') }}',
             data: data,
             async: true,
             beforeSend: function (xhr) {
