debugging sidebar js

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -137,7 +137,7 @@
                     $('#ups-'.index.id).html("UPS" + index.id + ": "+ index.status);
                 });
             }
-            setTimeout(sidebarPoll,1000);
+            setTimeout(sidebarPoll(),1000);
         });
     }
 </script>
