--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -116,7 +116,7 @@
 <br>
 <script type="text/javascript">
     $(document).ready(function() {
-        sidebarPoll();
+        //sidebarPoll();
     });
     
     function sidebarPoll(){
