--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -128,7 +128,7 @@
             });
         });
 
-        $.getJSON('{{ path('Venue json data') }}', function(data) {
+        $.getJSON('{{ path('Venue_json_data') }}', function(data) {
             $.each(data, function(index, venue) {
                 $('#venue-'+venue.id).html(venue.name + ": "+ venue.count.running_count_in-venue.count.running_count_out);
             });
