--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -124,7 +124,14 @@
     function sidebarPoll(){
         $.getJSON('{{ path('UPS_status') }}', function(data) {
             $.each(data, function(index, ups) {
-                $('#ups-'+ups.id).html("UPS" + ups.id + ": "+ ups.status);
+                var timestamp = new date(ups.timestamp);
+                var now = new date();
+                if ((now-timestamp)>300000){
+                    $('#ups-'+ups.id).html("UPS" + ups.id + ": Timeout ("+ ups.status+")");
+                } else {
+                    $('#ups-'+ups.id).html("UPS" + ups.id + ": "+ ups.status);
+                }
+                
             });
         });
 
