--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -124,8 +124,8 @@
     function sidebarPoll(){
         $.getJSON('{{ path('UPS_status') }}', function(data) {
             $.each(data, function(index, ups) {
-                var timestamp = new date(ups.timestamp);
-                var now = new date();
+                var timestamp = new Date(ups.timestamp);
+                var now = new Date();
                 if ((now-timestamp)>300000){
                     $('#ups-'+ups.id).html("UPS" + ups.id + ": Timeout ("+ ups.status+")");
                 } else {
