--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -124,7 +124,7 @@
     function sidebarPoll(){
         $.getJSON('{{ path('UPS_status') }}', function(data) {
             $.each(data, function(index, ups) {
-                var timestamp = new moment(ups.timestampdate);
+                var timestamp = new moment(ups.timestamp.date);
                 var now = new Date();
                 alert(timestamp+"   "+now);
                 if ((now-timestamp)>300000){
