--- a/app/Resources/views/peoplecounting.html.twig
+++ b/app/Resources/views/peoplecounting.html.twig
@@ -27,8 +27,7 @@
                                     <tr>
                                         <td>{{ venue.id }}</td>
                                         <td>{{ venue.name }}</td>
-                                        <td>{{ venue.doors }}</td>
-                                        {# <td>{{ attendee.time_in|date('Y-m-d H:i:s', "Europe/London") }}</td>#}
+                                        <td>{{ venue.doors|date('Y-m-d H:i:s', "Europe/London") }}</td>
 
                                     </tr>
                                 {% endfor %}
