--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -107,6 +107,11 @@
         Event System
     </div>
 </a>
+<a href="{{ path('peoplecounting') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+    <div class="row">
+        Event System
+    </div>
+</a>
 <div class="row">
         <h4>Files & Information</h4>
 </div>
