Adding people couting view

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -109,7 +109,7 @@
 </a>
 <a href="{{ path('peoplecounting') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
-        Event System
+    People Counting
     </div>
 </a>
 <div class="row">
