--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -14,10 +14,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Title</h4>
+        <h4 class="modal-title" id="mainModalLabel">Title</h4>
       </div>
-      <div class="modal-body">
-        ...
+      <div class="modal-body" id="mainModalBody">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
