--- a/app/Resources/views/peoplecounting.html.twig
+++ b/app/Resources/views/peoplecounting.html.twig
@@ -31,7 +31,7 @@
                                     <td><strong>Count in</strong></td>
                                     <td><strong>Count out</strong></td>
                                     <td><strong>Occupancy</strong></td>
-                                    <td><strong>Set doors?</strong></td>
+                                    <td><strong>Set doors</strong></td>
                                 </tr>
                                 {% for venue in venues %}
                                     <tr>
