--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -132,11 +132,14 @@
         $.getJSON('{{ path('UPS_status') }}', function(data) {
             $.each(data, function(index, ups) {
                 var statusString = "UPS" + ups.id + ": "+ ups.status;
-                if ($('#ups-'+ups.id).html() != statusString && i > 5)
+                if ($('#ups-'+ups.id).html() != statusString)
                 {
-                    $('#mainModalLabel').html("UPS " + ups.id + " " + ups.name)
-                    $('#mainModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location)
-                    $('#mainModal').modal('show')
+                    if (i > 2)
+                    {
+                        $('#mainModalLabel').html("UPS " + ups.id + " " + ups.name)
+                        $('#mainModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location)
+                        $('#mainModal').modal('show')
+                    }
                     $('#ups-'+ups.id).html(statusString);
                 }
             });
