--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -60,7 +60,7 @@
     </div>
     <ul class="list-group">
         {% for venue in venues %}
-            <li class="list-group-item" id="venue-{{ venue.id }}">{{ venue.name }}: Timeout</li>
+            <li class="list-group-item" id="venue-{{ venue.id }}">{{ venue.name }}: 0</li>
         {% endfor %}
     </ul>
 </div>
