UPS Modal modifications

--- a/app/Resources/views/3-9.html.twig
+++ b/app/Resources/views/3-9.html.twig
@@ -24,3 +24,20 @@
     </div>
   </div>
 </div>
+{% for ups in UPSs %}
+    <div class="modal fade" id="ups{{ ups.id }}Modal" tabindex="-1" role="dialog" aria-labelledby="{{ ups.id }}">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="ups{{ ups.id }}ModalLabel">Title</h4>
+            </div>
+            <div class="modal-body" id="ups{{ ups.id }}ModalBody">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+    </div>
+{% endfor %}
