--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -132,10 +132,9 @@ Control Room Log
             $.ajax({
                 type:'POST',
                 url: '{{ path('full_log_table') }}',
-                data: data,
                 cache: false,
                 global: false,
-                success:function(data)
+                success:function()
                 {
                 $("#logTable").html(data);
                 }
